# django-structlog-duration

./: LICENSE  README.md  pyproject.toml
django_structlog_duration/: __init__.py  middleware.py
